--- a/style.css
+++ b/style.css
@@ -28,20 +28,33 @@
 }
 
 .mySpan {
+  display: inline-block;
   /* 外间距 */
   /* margin: 100px; */
   margin: 5px 10px;
   /* 内间距 */
-  padding: 5px 10px;
+  padding: 5px 15px;
   /* 字体颜色 */
   color: #fff;
   /* 背景颜色 */
-  background-color: #13c2c2;
   background: linear-gradient(to right bottom, #131313, #ec5adb);
   /* 圆角处理 */
   border-radius: 20px;
   /* 鼠标手样式 */
   cursor: pointer;
+  transition: all 0.3s ease-in-out;
+}
+
+.mySpan:hover {
+  box-shadow: 8px 8px 12px -7px rgba(61, 16, 105, 0.62);
+  background: linear-gradient(to right bottom, #ec5adb, #131313);
+  border: 2px dashed #131313;
+}
+
+.mySpan:active {
+  background: #ec5adb;
+  color: rgb(76, 67, 72);
+  transform: scale(2);
 }
 
 header {
